<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            app:neumorph_shadowColorDark="@color/black"
            app:neumorph_shadowColorLight="@color/text_color"
            app:neumorph_shapeType="flat">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-20dp"
                android:text="@string/app_header"
                android:textColor="@color/highlight"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/app_subheader"
                android:textColor="@color/highlight"
                android:textSize="16sp" />
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            app:neumorph_shadowColorDark="@color/black"
            app:neumorph_shadowColorLight="@color/text_color"
            app:neumorph_shapeType="pressed">

            <EditText
                android:id="@+id/input_text"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="#00000000"
                android:gravity="start"
                android:hint="@string/input_text_hint"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:textColor="@color/highlight"
                android:textColorHint="@color/highlight"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                app:neumorph_shadowColorDark="@color/black"
                app:neumorph_shadowColorLight="@color/text_color"
                app:neumorph_shapeType="basin">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/is_encrypting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="-35dp"
                    android:layout_marginEnd="15dp"
                    android:checked="true"
                    android:text="@string/encrypt"
                    android:textColor="@color/highlight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/is_decrypting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="15dp"
                    android:checked="false"
                    android:text="@string/decrypt"
                    android:textColor="@color/highlight"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                app:neumorph_shadowColorDark="@color/black"
                app:neumorph_shadowColorLight="@color/text_color"
                app:neumorph_shapeType="pressed">

                <EditText
                    android:id="@+id/key_input_text"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:background="#00000000"
                    android:gravity="start"
                    android:hint="@string/enter_key_here"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:textColor="@color/highlight"
                    android:textColorHint="@color/highlight"
                    android:textStyle="bold" />
            </soup.neumorphism.NeumorphCardView>
        </LinearLayout>

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            app:neumorph_shadowColorDark="@color/black"
            app:neumorph_shadowColorLight="@color/text_color"
            app:neumorph_shapeType="flat">

            <TextView
                android:id="@+id/output_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="14dp"
                android:hint="@string/output_hint"
                android:textColor="@color/highlight"
                android:textColorHint="@color/highlight"
                android:textSize="18sp"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/submit_btn"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/btn_text"
            android:textColor="@color/highlight"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:neumorph_shadowColorDark="@color/black"
            app:neumorph_shadowColorLight="@color/text_color" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="null"
            android:background="#00000000"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/developer_home"
            android:textColor="@color/highlight"
            android:textSize="13sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</RelativeLayout>